Fix missing border in schedule

--- a/_sass/partials/_schedule.scss
+++ b/_sass/partials/_schedule.scss
@@ -59,6 +59,7 @@ $small-label-width: 80px;
 .track-header {
     z-index: 10;
     transition: $base-transition;
+    border-top: 1px solid #e7e7e7;
     &.sticky {
         box-shadow: 0 0 5px rgba(0, 0, 0, .2), 0 1px 0 rgba(255, 255, 255, .15);
     }
